--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="page-footer">
   <div class="container">
-    Tò tńg去 <a href="https://chhoe.taigi.info/" target="_blank">ChhoeTaigi 台語辭典</a>
+    Tò tńg去 <a href="https://kiek.taigi.info/" target="_blank">台語文記憶。Tâi-gí-bûn Kì-ek</a>
   </div>
 </footer>
