--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,11 +5,11 @@
 
   <link rel="shortcut icon" media="(prefers-color-scheme: light)" type="image/png" href="{{ "/assets/images/favicon-light.ico" | relative_url }}">
   <link rel="shortcut icon" media="(prefers-color-scheme: dark)" type="image/png" href="{{ "/assets/images/favicon-dark.ico" | relative_url }}">
-  
-  <title>{{ site.title | escape }}・ChhoeTaigi</title>
+
+  <title>{{ site.title | escape }}・台語文記憶</title>
   {%- seo title=false -%}
-  <meta property="og:title" content="{{ site.title | escape }}・ChhoeTaigi" />
-  <meta property="twitter:title" content="{{ site.title | escape }}・ChhoeTaigi" />
+  <meta property="og:title" content="{{ site.title | escape }}・台語文記憶" />
+  <meta property="twitter:title" content="{{ site.title | escape }}・台語文記憶" />
 
   <meta itemprop="image" content="{{ "/assets/images/preview.jpg" | relative_url }}" />
   <meta property="og:image" content="{{ "/assets/images/preview.jpg" | relative_url }}" />
@@ -18,6 +18,6 @@
   <link rel="stylesheet" href="{{ "/assets/stylesheets/styles.css" | relative_url }}">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
+  {%- include google-analytics.html -%}
   {%- endif -%}
 </head>
