--- a/_layouts/viewer.html
+++ b/_layouts/viewer.html
@@ -1,72 +1,73 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.lang | default: site.lang | default: " en" }}">
 
-  {%- include head.html -%}
+{%- include head.html -%}
 
-  <body class="viewer">
-    <header class="viewer__header">
-      <h1 id="viewer-title"><a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></h1>
-      <div id="viewer-controller" class="viewer__header__controller">
-        <ul>
-          <li>
-            <button id="viewer-zoom-in">
-              <img src="{{ site.baseurl }}/assets/images/icons/plus.svg" alt="zoom in" />
+<body class="viewer">
+  <header class="viewer__header">
+    <h1 id="viewer-title"><a href="{{ "/soatbeng/" | relative_url }}">{{ site.title | escape }}</a></h1>
+    <div id="viewer-controller" class="viewer__header__controller">
+      <ul>
+        <li>
+          <button id="viewer-zoom-in">
+            <img src="{{ site.baseurl }}/assets/images/icons/plus.svg" alt="zoom in" />
+          </button>
+        </li>
+        <li>
+          <button id="viewer-zoom-out">
+            <img src="{{ site.baseurl }}/assets/images/icons/minus.svg" alt="zoom out" />
+          </button>
+        </li>
+        <li>
+          <button id="viewer-home">
+            <img src="{{ site.baseurl }}/assets/images/icons/fit.svg" alt="reset size" />
+          </button>
+        </li>
+        <li>
+          <a href="{{ "/khiboo/" | relative_url }}" target="_blank">
+            <button id="viewer-keyboard-hotkeys">
+              <img src="{{ site.baseurl }}/assets/images/icons/keyboard.svg" alt="keyboard hotkeys" />
             </button>
-          </li>
-          <li>
-            <button id="viewer-zoom-out">
-              <img src="{{ site.baseurl }}/assets/images/icons/minus.svg" alt="zoom out" />
+          </a>
+        </li>
+        <li>
+          <a href="{{ "/soatbeng/" | relative_url }}">
+            <button id="viewer-goto-index">
+              <img src="{{ site.baseurl }}/assets/images/icons/info.svg" alt="info" />
             </button>
-          </li>
-          <li>
-            <button id="viewer-home">
-              <img src="{{ site.baseurl }}/assets/images/icons/fit.svg" alt="reset size" />
-            </button>
-          </li>
-          <li>
-            <a href="{{ "/khiboo/" | relative_url }}" target="_blank">
-              <button id="viewer-keyboard-hotkeys">
-                <img src="{{ site.baseurl }}/assets/images/icons/keyboard.svg" alt="keyboard hotkeys" />
-              </button>
-            </a>
-          </li>
-          <li>
-            <a href="{{ "/" | relative_url }}">
-              <button id="viewer-goto-index">
-                <img src="{{ site.baseurl }}/assets/images/icons/info.svg" alt="info" />
-              </button>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </header>
-    <div id="viewer-block" class="viewer__content">
+          </a>
+        </li>
+      </ul>
     </div>
+  </header>
+  <div id="viewer-block" class="viewer__content">
+  </div>
 
-    <footer class="viewer__footer">
-      <div class="viewer__page-controller-1">
-        <ul>
-          <li>
-            <button id="viewer-prev">
-              <img src="{{ site.baseurl }}/assets/images/icons/prev.svg" alt="prev page" />
-            </button>
-          </li>
-          <li>
-            <button id="viewer-next">
-              <img src="{{ site.baseurl }}/assets/images/icons/next.svg" alt="next page" />
-            </button>
-          </li>
-          <li>
-            <div id="current-page" class="viewer__page-controller-1__current-page"></div>
-          </li>
-        </ul>
-      </div>
-      <div class="viewer__page-controller-2">
-        去第<input type="number" id="goto-page" />頁，
-        <button id="goto-page__go">Hian 掀</button>
-      </div>
-    </footer>
-  </body>
-  <script src="{{ "/assets/javascripts/openseadragon.min.js" | relative_url }}"></script>
-  <script src="{{ "/assets/javascripts/viewer.js" | relative_url }}"></script>
+  <footer class="viewer__footer">
+    <div class="viewer__page-controller-1">
+      <ul>
+        <li>
+          <button id="viewer-prev">
+            <img src="{{ site.baseurl }}/assets/images/icons/prev.svg" alt="prev page" />
+          </button>
+        </li>
+        <li>
+          <button id="viewer-next">
+            <img src="{{ site.baseurl }}/assets/images/icons/next.svg" alt="next page" />
+          </button>
+        </li>
+        <li>
+          <div id="current-page" class="viewer__page-controller-1__current-page"></div>
+        </li>
+      </ul>
+    </div>
+    <div class="viewer__page-controller-2">
+      去第<input type="number" id="goto-page" />頁，
+      <button id="goto-page__go">Hian 掀</button>
+    </div>
+  </footer>
+</body>
+<script src="{{ "/assets/javascripts/openseadragon.min.js" | relative_url }}"></script>
+<script src="{{ "/assets/javascripts/viewer.js" | relative_url }}"></script>
+
 </html>
